python-test_driven_development/tests/2-matrix_divided.txt
Module that provides matrix_divided function
~~~~~~~~~~~~~~~~~~~~~~~~
Prototype: def matrix_divided(matrix, div):
~~~~~~~~~~~~~~~~~~~~~~~~

First import function, (first line) then test:

>>> matrix_divided = __import__('2-matrix_divided').matrix_divided
>>> matrix_divided([[1, 3, 2], [4, -6, 2]], 2)
[[0.5, 1.5, 1.0], [2.0, -3.0, 1.0]]
>>> matrix = [[1, 2, 3], [4, 5, 6]]
>>> matrix_divided(matrix, 2)
[[0.5, 1.0, 1.5], [2.0, 2.5, 3.0]]
>>> matrix_divided(matrix, 5)
[[0.2, 0.4, 0.6], [0.8, 1.0, 1.2]]
>>> matrix_divided(matrix, 'str')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/root/holbertonschool-higher_level_programming/python-test_driven_development/2-matrix_divided.py", line 17, in matrix_divided
    raise TypeError('div must be a number')
TypeError: div must be a number
>>> matrix_divided(matrix, )
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: matrix_divided() missing 1 required positional argument: 'div'
>>> matrix_divided(matrix, 0)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/root/holbertonschool-higher_level_programming/python-test_driven_development/2-matrix_divided.py", line 19, in matrix_divided
    raise ZeroDivisionError('division by zero')
ZeroDivisionError: division by zero
>>> matrix = [[1, 2, 3], [4, 5, 6, 8]]
>>> matrix_divided(matrix, 2)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/root/holbertonschool-higher_level_programming/python-test_driven_development/2-matrix_divided.py", line 19, in matrix_divided
    raise TypeError("Each row of the matrix must have the same size")
TypeError: Each row of the matrix must have the same size
>>> matrix = [[1, 2, 3],[4, 'fifth element', 6]]
>>> matrix_divided(matrix, 3)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/root/holbertonschool-higher_level_programming/python-test_driven_development/2-matrix_divided.py", line 31, in matrix_divided
    raise TypeError('matrix must be a '
TypeError: matrix must be a matrix (list of lists) of integers/floats